# YoVoy2

./: CMakeLists.txt  FREADME.md  main.cpp  run.bat
data/: .movements.csv  n.csv  red.csv  v.csv  vehicles.csv
online_documentation/: .env.example  README.md  docs-config.json  package-lock.json  package.json  sync-docs.bat  tailwind.config.js
online_documentation/app/: globals.css  layout.tsx  page.tsx
online_documentation/scripts/: clean-emojis.js  sync-docs.js
seeds/: red.csv  seed1.csv  vehicles.csv
src/: Algorithms.h  BFS.cpp  DFS.cpp  Dijkstra.cpp  Graph.cpp  Graph.h  HashTable.cpp  HashTable.h
utils/: colors.h  fileUtils.h  inputUtils.h  keyUtils.h  tableUtils.h
